--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ __pycache__/
 /[bs]dist/
 /*.egg-info/
 *.egg
+.idea/vcs.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/robot_tests.broker.privatmarket.iml
+.idea/workspace.xml
