--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized files
 __pycache__/
+*.py[cod]
 
 # Distribution / packaging
 /build/
@@ -7,6 +8,3 @@ __pycache__/
 /[bs]dist/
 /*.egg-info/
 *.egg
-.idea
-privatmarket_service.pyc
-
